# RustMath

./: .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_QUICK_REFERENCE.md  BENCHMARKING_GUIDE.md  BENCHMARKS.md  BENCHMARKS_FIXED.md  BENCHMARK_SUITE.md  BUILD_ANALYSIS_SUMMARY.md  BUILD_ERRORS_STRATEGY.md  BUILD_ERROR_SUMMARY.txt  BUILD_FAILURES_PLAN.md  BUILD_FIX_STRATEGY.md  BUILD_STATUS.md  CDEPS.md  CLAUDE.md  CODEBASE_EXPLORATION.md  COMBINATORIAL_MAPS.md  Cargo.toml  Combinatorial_sprint.md  DENDRIFORM_EXPLORATION_SUMMARY.txt  DEPENDENCIES_TODO.md  DEVELOPMENT_STRATEGY.md  DOCUMENTATION_INDEX.md  ERROR_ANALYSIS.md  ERROR_ANALYSIS_INDEX.md  ERROR_EXAMPLES.md  ERROR_FIX_CHECKLIST.md  ERROR_QUICK_REFERENCE.md  EXPLORATION_INDEX.md  EXPLORATION_SUMMARY.md  Final_Sprint.md  IMPLEMENTATION_ANALYSIS_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_TYPE_MAPPING.csv  IMPLEMENTED_BY_MODULE.md  IMPLEMENTED_MODULES.csv  IMPLEMENTED_MODULES_REPORT.md  JACOBIAN_VARIETIES_README.md  MANIFOLDS_STATUS.md  MODULESWITHBASIS_ARCHITECTURE.txt  (+79 more)
rustmath-affineschemes/: Cargo.toml
rustmath-affineschemes/src/: dimension.rs  fiber_product.rs  lib.rs  morphism.rs  prime_ideal.rs  spec.rs  structure_sheaf.rs  varieties.rs
rustmath-algebraic/: Cargo.toml
rustmath-algebraic/src/: algebraic_field.rs  algebraic_number.rs  algebraic_real.rs  algebraic_real_field.rs  comparison.rs  conjugates.rs  descriptor.rs  embeddings.rs  lib.rs  minimal_polynomial.rs  operations.rs  radicals.rs
rustmath-algebras/: Cargo.toml
rustmath-algebras/src/: ace_quantum_onsager.rs  affine_nil_temperley_lieb.rs  algebra_morphism.rs  algebra_with_parent.rs  ariki_koike_algebra.rs  ariki_koike_specht_modules.rs  askey_wilson.rs  associated_graded.rs  blob_algebra.rs  brauer_algebra.rs  cached_algebra.rs  catalog.rs  cellular_basis.rs  clifford_algebra.rs  cluster_algebra.rs  cluster_integration.rs  cluster_variable.rs  commutative_dga.rs  cubic_hecke_algebra.rs  cubic_hecke_base_ring.rs  cubic_hecke_matrix_rep.rs  diagram.rs  down_up_algebra.rs  e_one_star.rs  f_matrix.rs  fast_parallel_fmats_methods.rs  fast_parallel_fusion_ring_braid_repn.rs  finite_dimensional_algebra.rs  finite_dimensional_algebra_ideal.rs  finite_dimensional_algebra_morphism.rs  finite_gca.rs  free_algebra.rs  free_zinbiel_algebra.rs  fusion_double.rs  fusion_ring.rs  group_algebra.rs  hall_algebra.rs  iwahori_hecke_algebra.rs  jordan_algebra.rs  lib.rs  (+28 more)
rustmath-benchmarks/: Cargo.toml
rustmath-benchmarks/src/: bench_integers.rs  bench_matrix.rs  bench_polynomials.rs  bench_symbolic.rs
rustmath-calculus/: Cargo.toml
rustmath-calculus/src/: desolvers.rs  differentiation.rs  expr.rs  functional.rs  integration.rs  interpolation.rs  interpolators.rs  laplace.rs  lib.rs  limits.rs  maxima_compat.rs  minpoly.rs  ode.rs  pochhammer.rs  product.rs  riemann.rs  sum.rs  taylor.rs  var.rs
rustmath-coding/: Cargo.toml
rustmath-coding/src/: bch.rs  golay.rs  hamming.rs  lib.rs  linear_code.rs  reed_solomon.rs  syndrome.rs
rustmath-colors/: Cargo.toml
rustmath-colors/src/: color.rs  colormap.rs  conversions.rs  lib.rs  named_colors.rs  parser.rs
rustmath-combinatorics/: Cargo.toml
rustmath-combinatorics/examples/: bijectionist_demo.rs  permutation_simd_demo.rs
rustmath-combinatorics/src/: affine_permutations.rs  alternating_sign_matrix.rs  backtrack.rs  baxter_permutations.rs  bijectionist.rs  binary_words.rs  cluster_complex.rs  combinations.rs  combinatorial_map.rs  combinatorial_map_examples.rs  composition.rs  composition_tableau.rs  constellation.rs  cyclic_sieving.rs  debruijn.rs  dendriform_algebra.rs  derangements.rs  descent_algebra.rs  designs.rs  dlx.rs  dyck_word.rs  enumeration.rs  expnums.rs  finite_state_machine_generators.rs  free_prelie_algebra.rs  fully_commutative_elements.rs  fully_packed_loop.rs  gelfand_tsetlin.rs  grossman_larson.rs  group_action.rs  growth_diagram.rs  hall_polynomial.rs  integer_lists.rs  integer_matrices.rs  integer_vectors.rs  interval_posets.rs  kazhdan_lusztig.rs  key_polynomial.rs  knutson_tao.rs  lib.rs  (+48 more)
rustmath-complex/: Cargo.toml
rustmath-complex/src/: complex.rs  complex_arb.rs  complex_interval.rs  complex_interval_field.rs  complex_mpc_ext.rs  lib.rs  mpc.rs
rustmath-crypto/: Cargo.toml
rustmath-crypto/src/: authenticated.rs  block_cipher.rs  classical.rs  des.rs  diffie_hellman.rs  eddsa.rs  elgamal.rs  elliptic_curve.rs  hash.rs  kdf.rs  lib.rs  mini_aes.rs  present.rs  rsa.rs  simplified_des.rs  stream_cipher.rs  utils.rs
rustmath-crystals/: Cargo.toml
rustmath-crystals/src/: affine.rs  character.rs  elementary.rs  highest_weight.rs  kr_crystal.rs  lib.rs  littelmann.rs  morphisms.rs  nakajima.rs  operators.rs  rigged_configurations.rs  root_system.rs  spin_crystal.rs  tableau_crystal.rs  tensor_product.rs  weight.rs
rustmath-curves/: Cargo.toml
rustmath-curves/src/: cantor.rs  differentials.rs  divisor.rs  genus.rs  hyperelliptic.rs  jacobian.rs  lib.rs  parameterization.rs  plane_curve.rs  riemann_roch.rs  singularities.rs  special_divisors.rs  weierstrass.rs
rustmath-databases/: Cargo.toml  README.md
rustmath-databases/examples/: cremona_demo.rs  cunningham_demo.rs  oeis_demo.rs
rustmath-databases/src/: cache.rs  cremona.rs  cunningham.rs  lib.rs  lmfdb.rs  oeis.rs
rustmath-dynamics/: Cargo.toml
rustmath-dynamics/src/: chaos.rs  continuous.rs  discrete.rs  fractals.rs  lib.rs
rustmath-features/: Cargo.toml  README.md
rustmath-features/examples/: basic_usage.rs  fallback_operation.rs
rustmath-features/src/: conditional.rs  fallback.rs  lib.rs
rustmath-finitefields/: Cargo.toml
rustmath-finitefields/src/: conway.rs  (+4 more)
rustmath-functions/: Cargo.toml
rustmath-geometry/: Cargo.toml
rustmath-graphs/: Cargo.toml
rustmath-groups/: Cargo.toml
rustmath-homology/: Cargo.toml
rustmath-integers/: Cargo.toml
rustmath-interfaces/: Cargo.toml  README.md
rustmath-liealgebras/: Cargo.toml
rustmath-lieconformal/: Cargo.toml
rustmath-manifolds/: Cargo.toml
rustmath-matrix/: Cargo.toml
rustmath-misc/: Cargo.toml
rustmath-modular/: Cargo.toml
(+922 files in other folders)
