[workspace]
resolver = "2"

members = [
    "rustmath-core",
    "rustmath-integers",
    "rustmath-rationals",
    "rustmath-reals",
    "rustmath-complex",
    "rustmath-polynomials",
    "rustmath-powerseries",
    "rustmath-finitefields",
    "rustmath-padics",
    "rustmath-matrix",
    "rustmath-calculus",
    "rustmath-numbertheory",
    "rustmath-combinatorics",
    "rustmath-geometry",
    "rustmath-graphs",
    "rustmath-symbolic",
    "rustmath-crypto",
    "rustmath-groups",
    "rustmath-homology",
    "rustmath-category",
    "rustmath-stats",
    "rustmath-numerical",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["RustMath Contributors"]
repository = "https://github.com/johnjanik/RustMath"

[workspace.dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"
ndarray = "0.15"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
