[workspace]
resolver = "2"

exclude = [
    "rustmath-py",  # Python bindings (cdylib) - built separately with maturin
]

members = [
    "rustmath-core",
    "rustmath-features",
    "rustmath-typesetting",
    "rustmath-integers",
    "rustmath-rationals",
    "rustmath-reals",
    "rustmath-complex",
    "rustmath-polynomials",
    "rustmath-powerseries",
    "rustmath-finitefields",
    "rustmath-padics",
    "rustmath-algebraic",
    "rustmath-matrix",
    "rustmath-calculus",
    "rustmath-numbertheory",
    "rustmath-combinatorics",
    "rustmath-constants",
    "rustmath-crystals",
    "rustmath-geometry",
    "rustmath-graphs",
    "rustmath-symbolic",
    "rustmath-symmetricfunctions",
    "rustmath-functions",
    "rustmath-special-functions",
    "rustmath-crypto",
    "rustmath-groups",
    "rustmath-homology",
    "rustmath-category",
    "rustmath-stats",
    "rustmath-numerical",
    "rustmath-logic",
    "rustmath-dynamics",
    "rustmath-coding",
    "rustmath-databases",
    "rustmath-ellipticcurves",
    "rustmath-quadraticforms",
    "rustmath-numberfields",
    "rustmath-manifolds",
    "rustmath-modular",
    "rustmath-monoids",
    "rustmath-modules",
    "rustmath-misc", "rustmath-algebras",
    "rustmath-quantumgroups",
    "rustmath-liealgebras",
    "rustmath-lieconformal",
    "rustmath-quivers",
    "rustmath-colors",
    "rustmath-plot-core",
    "rustmath-plot",
    "rustmath-plot3d",
    "rustmath-rings",
    "rustmath-topology",
    "rustmath-sets",
    "rustmath-interfaces",
    "rustmath-affineschemes",
    "rustmath-schemes",
    "rustmath-trees",
    "rustmath-automata",
    "rustmath-symmetricfunctions",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["RustMath Contributors"]
repository = "https://github.com/johnjanik/RustMath"

[workspace.dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"
ndarray = "0.15"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
once_cell = "1.19"
regex = "1.10"
