[package]
name = "rustmath-calculus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-symbolic = { path = "../rustmath-symbolic" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-complex = { path = "../rustmath-complex" }
lazy_static = "1.4"
