[package]
name = "rustmath-coding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-rationals = { path = "../rustmath-rationals" }
rustmath-matrix = { path = "../rustmath-matrix" }
rustmath-finitefields = { path = "../rustmath-finitefields" }
rustmath-polynomials = { path = "../rustmath-polynomials" }
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
thiserror.workspace = true
