[package]
name = "rustmath-colors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = []
serde = ["dep:serde"]
