[package]
name = "rustmath-combinatorics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-polynomials = { path = "../rustmath-polynomials" }
rustmath-rationals = { path = "../rustmath-rationals" }
num-bigint = "0.4"
num-traits = "0.2"
