[package]
name = "rustmath-complex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-reals = { path = "../rustmath-reals" }
rustmath-rationals = { path = "../rustmath-rationals" }
rustmath-typesetting = { path = "../rustmath-typesetting" }
num-traits = { workspace = true }
serde = { workspace = true, optional = true }
rug = { version = "1.24", default-features = false, features = ["float", "integer", "complex"] }

[features]
default = []
serde = ["dep:serde"]
