[package]
name = "rustmath-crystals"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-combinatorics = { path = "../rustmath-combinatorics" }
rustmath-matrix = { path = "../rustmath-matrix" }
