[package]
name = "rustmath-databases"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1"
thiserror = { workspace = true }

[dev-dependencies]
