[package]
name = "rustmath-dynamics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-reals = { path = "../rustmath-reals" }
rustmath-complex = { path = "../rustmath-complex" }
