[package]
name = "rustmath-functions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-rationals = { path = "../rustmath-rationals" }
rustmath-reals = { path = "../rustmath-reals" }
rustmath-complex = { path = "../rustmath-complex" }
rustmath-symbolic = { path = "../rustmath-symbolic" }
num-traits = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
