[package]
name = "rustmath-graphs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-matrix = { path = "../rustmath-matrix" }
rustmath-powerseries = { path = "../rustmath-powerseries" }
rustmath-polynomials = { path = "../rustmath-polynomials" }
rand = "0.8"
