[package]
name = "rustmath-groups"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-matrix = { path = "../rustmath-matrix" }
rustmath-combinatorics = { path = "../rustmath-combinatorics" }
rustmath-rationals = { path = "../rustmath-rationals" }
rustmath-complex = { path = "../rustmath-complex" }
rustmath-graphs = { path = "../rustmath-graphs" }
