[package]
name = "rustmath-homology"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-matrix = { path = "../rustmath-matrix" }
rustmath-groups = { path = "../rustmath-groups" }
