[package]
name = "rustmath-interfaces"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-combinatorics = { path = "../rustmath-combinatorics" }
rustmath-groups = { path = "../rustmath-groups" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
regex = "1.10"

[dev-dependencies]

[features]
default = []
# Optional GAP interface (requires GAP system installation)
gap = []
