[package]
name = "rustmath-manifolds"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-rationals = { path = "../rustmath-rationals" }
rustmath-reals = { path = "../rustmath-reals" }
rustmath-symbolic = { path = "../rustmath-symbolic" }
num-traits = { workspace = true }
thiserror = { workspace = true }
