[package]
name = "rustmath-matrix"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
ndarray = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "ndarray/serde"]
parallel = []
