[package]
name = "rustmath-matrix"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustmath-core = { path = "../rustmath-core" }
rustmath-polynomials = { path = "../rustmath-polynomials" }
rustmath-integers = { path = "../rustmath-integers" }
rustmath-rationals = { path = "../rustmath-rationals" }
ndarray = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rustmath-rationals = { path = "../rustmath-rationals" }

[features]
default = []
serde = ["dep:serde", "ndarray/serde"]
parallel = []
